--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -46,5 +46,11 @@
   font-family: "Varela Round", sans-serif;
   font-size: 14px;
   color: #444;
-  line-height: 24;
+  line-height: 24px;
+  margin-top: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient:vertical;
 }
