--- a/client/src/components/SinglePost/singlepost.css
+++ b/client/src/components/SinglePost/singlepost.css
@@ -1,10 +1,12 @@
 .singlePost {
-    flex:9
+    flex:9;
 }
 
 .singleWrap {
     padding: 20px;
-    padding-right: 0;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .singlePostImg {
@@ -20,6 +22,21 @@
     font-family: "Lora",serif;
     font-size: 28px;
 }
+
+.singlePostTitleInput {
+    margin: 10px;
+    font-family: "Lora",serif;
+    font-size: 28px;
+    text-align: center;
+    border: none;
+    color: grey;
+    border-bottom: 1px solid grey;
+}
+
+.singlePostTitleInput:focus {
+    outline: none;
+}
+
 
 .singlePostEdit {
     float: right;
@@ -58,4 +75,28 @@
     margin-left: 20px;
     font-size: 38px;
     font-weight: 600;
+}
+
+.singlePostDescInput {
+    border: none;
+    color: #666;
+    font-size: 18px;
+    line-height: 25px;
+    height: 200px;
+}
+
+.singlePostDescInput:focus {
+    outline: none;
+}
+
+.singlePostButton {
+    width: 100px;
+    border: none;
+    background-color:teal;
+    padding: 5px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    align-self: flex-end;
+    margin-top: 20px;
 }
