--- a/client/src/components/pages/login/login.css
+++ b/client/src/components/pages/login/login.css
@@ -38,6 +38,11 @@
     padding: 10px;
 }
 
+.loginButton :disabled {
+    cursor:not-allowed;
+    background-color: red;
+}
+
 .loginRegisterButton {
     position: absolute;
     top: 60px;
